# yalantinglibs_find_package_demo

./: .gitignore  CMakeLists.txt  README.md
client/: CMakeLists.txt  client.cpp  service.h
server/: CMakeLists.txt  server.cpp
